// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConferenceSeries renders with name and number 1`] = `
<span>
  <span>
    10th
     conference
  </span>
   in the 
  <Link
    replace={false}
    to="/conferences?q=series.name:Conference Name"
  >
    Conference Name
  </Link>
   series
</span>
`;

exports[`ConferenceSeries renders with only name 1`] = `
<span>
  <span>
    Conference
  </span>
   in the 
  <Link
    replace={false}
    to="/conferences?q=series.name:Conference Name"
  >
    Conference Name
  </Link>
   series
</span>
`;
